[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rducb"
version = "0.1.0"
description = "Standalone packaging of RDUCB from Huawei HEBO for research reuse."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Anna", email = "anna.nazarova@campus.lmu.de"}]
keywords = ["rducb", "bayesian-optimization", "hebo", "ucb"]

dependencies = [
  "numpy>=1.18",
  "scipy>=1.4",
  "scikit-learn>=0.24",
  "networkx>=2.4",
  "psutil>=5.7",
  "pyyaml",
  "ruamel.yaml",
  "coloredlogs",
  "ConfigSpace==0.4.11",
  "cma",
  "imageio",
  "disjoint-set==0.6.2",
  "pid==3.0.3",
  "HEBO>=0.3.2"
]

[project.optional-dependencies]
extras = [
  "GPy==1.9.9",
  "GPyOpt==1.2.6",
  "boto3>=1.14.14",
]

[tool.setuptools]
packages = ["RDUCB"]
include-package-data = true

[tool.setuptools.package-data]
RDUCB = ["*.py", "**/*.py"]